<resources>
    <string name="app_name">osc-Tweet</string>
    <string name="application_name">osc-Tweet</string>
    <string name="action_top">Move to top</string>
    <string name="action_share">Share</string>
    <string name="action_at_him">\@%s</string>
    <string name="action_reply_comment">Reply</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_send">Send</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_clear_at_me">Clear @me</string>
    <string name="action_clear_comments">Clear new comments</string>
    <string name="action_undo">Undo</string>
    <string name="action_clear">Clear</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_favorite">Add to favorite</string>
    <string name="action_delete_favorite">Add to favorite</string>
    <string name="action_backward">Backward</string>
    <string name="action_forward">Forward</string>
    <string name="action_personal_information">Personal Information</string>

    <string name="msg_move_to_top">Return top</string>
    <string name="msg_operating_successfully">Operating successfully.</string>
    <string name="msg_operating_failed">Operating failed.</string>
    <string name="msg_message_input">Please fill your content.</string>
    <string name="msg_follow">You have fallowed on %s</string>
    <string name="msg_follow_cancel">You have canceled relation on %s</string>
    <string name="msg_update_my_info" formatted="false">(%d) \@me, (%d) new comments</string>
    <string name="msg_load_config">Load application configuration…</string>
    <string name="msg_works_in_next_request">Works in next request.</string>
    <string name="msg_load_more">More to load…</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_agree">I agree.</string>
    <string name="btn_not_agree">I do not agree.</string>
    <string name="btn_retry">Retry</string>

    <string name="lbl_play_service">This application needs Google Play Service, you must install it first.</string>
    <string name="lbl_share_app_title">A good App you should have: %s</string>
    <string name="lbl_share_app_content">Hello!\n\n\u00A0\u00A0\u00A0\u00A0Use osc-Tweet and join oschina.net?\n\nDownload:\n
        https://play.google.com/store/apps/details?id=com.osc.tweet</string>
    <string name="lbl_share_item_title">osc-Tweet</string>
    <string name="lbl_share_item_content">%1$s\n%2$s\n\nDownload Tweet app of oschina.net:\n
        https://play.google.com/store/apps/details?id=com.osc.tweet</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">&lt;b&gt;%1$s &lt;/b&gt;&lt;br&gt;Version %2$s &lt;br&gt;</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <string name="about_eula_legal_text">Your use of this application is governed by a)Activating permissions of
        hardware that the features of this application need and work well. b)The Google Terms of
        Service (http://www.google.com/intl/en/policies/terms/), Google\'s Privacy
        Policy(http://www.google.com/intl/en/policies/privacy/). c)Any applicable Google service-specific terms of service of privacy
        policies. Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.\n\n\nBy using the application, your agree to the use of your data and permissions of your hardware in
        accordance with Google\'s Privacy Policy and Google Terms of Service.</string>
    <string name="play_service_url">market://details?id=com.google.android.gms</string>
    <string name="play_service_web">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="lbl_user_cancel_follow">Not follow</string>
    <string name="lbl_user_follow">Follow</string>
    <string name="lbl_user_gender_female">Female</string>
    <string name="lbl_user_gender_male">Male</string>
    <string name="lbl_user_name">Name:</string>
    <string name="lbl_user_nickname">Nickname:</string>
    <string name="lbl_user_platform">OS:</string>
    <string name="lbl_user_skill">Skill:</string>
    <string name="lbl_user_location">From:</string>
    <string name="lbl_user_gender">Gender:</string>
    <string name="lbl_editor_title">Write message</string>
    <string name="lbl_comments">All replies</string>
    <string name="lbl_all">All</string>
    <string name="lbl_hotspot">HOT</string>
    <string name="lbl_my">Mine</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_open">Open</string>
    <string name="lbl_at_me">\@me</string>
    <string name="lbl_new_comments">New comments</string>
    <string name="lbl_hello">Hello</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_current">Current:</string>
    <string name="lbl_friends_count" formatted="false">%d fans and %d followed</string>
    <string name="lbl_hometown">From</string>
    <string name="lbl_no_home">no home</string>
    <string name="lbl_main_page">Web version</string>
    <string name="lbl_all_known">All known</string>
    <string name="lbl_might_know">Might know</string>
    <string name="lbl_all_notices">All notices</string>
    <string name="lbl_my_profile">Profile</string>
    <string name="lbl_edit_my_profile">Edit Profile</string>
    <string name="lbl_might_known_people">People you might know</string>

    <string name="quick_reply_list">quick_reply_en</string>

    <!--Settings-->
    <string name="setting_on">On</string>
    <string name="setting_off">Off</string>
    <string name="setting_yes">Yes</string>
    <string name="setting_no">No</string>
    <string name="setting_category_operation">Operation</string>
    <string name="setting_vibrate_feedback_title">Action feedback with vibration.</string>
    <string name="setting_notices_open_to_clear_title">Open one new notice(not the reply) then clear all of them.</string>
    <string name="setting_show_me_in_notices_title">Show \"me\" in notices-lists.\nThat means I will see when I @me or I commented on my published item myself.</string>
    <string name="setting_category_image">Image</string>
    <string name="setting_photo_rotate_slow_or_fast_title">Rotate photo slow or fast.</string>
    <string-array name="setting_photo_rotate_types">
        <item>Slow</item>
        <item>Medium</item>
    </string-array>
    <string-array name="setting_photo_rotate_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
