<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_top"
        android:title="@string/action_top"
        android:icon="@drawable/ic_top"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_might_know"
        android:title="@string/lbl_might_know"
        android:icon="@drawable/ic_action_social_group_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_app"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/lbl_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
