<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear_notices"
        android:title="@string/action_clear"
        android:icon="@drawable/ic_clear_list"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_clear_at_me"
                android:title="@string/action_clear_at_me"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_clear_comments"
                android:title="@string/action_clear_comments"
                app:showAsAction="never" />
        </menu>
    </item>



    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="never"/>

</menu>