<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.osc.tweet.views.RoundedNetworkImageView
            android:id="@+id/portrait_iv"
            android:layout_marginRight="@dimen/common_padding"
            android:layout_marginLeft="@dimen/common_padding"
            android:layout_width="@dimen/portrait_large_size"
            android:layout_height="@dimen/portrait_large_size"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/user_name_lbl_tv"
                    android:text="@string/lbl_user_name"
                    style="@style/Style_User_Information_Label" />

                <TextView
                    android:id="@+id/user_name_tv"
                    style="@style/Style_User_Information_Value" />

                <TextView
                    android:text="@string/lbl_user_gender"
                    style="@style/Style_User_Information_Label" />

                <TextView
                    android:id="@+id/user_gender_tv"
                    style="@style/Style_User_Information_Value" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/lbl_user_location"
                    style="@style/Style_User_Information_Label" />

                <TextView
                    android:id="@+id/user_location_tv"
                    android:text="@string/lbl_no_home"
                    style="@style/Style_User_Information_Value" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>