<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_v"
    android:background="@color/common_transparent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding"
    tools:context="com.osc.tweet.app.fragments.UserInformationDialogFragment">

    <FrameLayout
        android:id="@+id/all_container" android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/gradient_green_line"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_info_list_margin"
            android:layout_marginLeft="@dimen/user_info_list_margin"
            android:layout_marginRight="@dimen/user_info_list_margin">

            <LinearLayout
                android:padding="@dimen/common_padding"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingLeft="@dimen/user_info_list_margin"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/lbl_user_name"
                        style="@style/Style_User_Information_Label" />

                    <TextView
                        android:id="@+id/user_name_tv"
                        style="@style/Style_User_Information_Value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingLeft="@dimen/user_info_list_margin"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/lbl_user_nickname"
                        style="@style/Style_User_Information_Label" />

                    <TextView
                        android:id="@+id/user_ident_tv"
                        style="@style/Style_User_Information_Value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingLeft="@dimen/user_info_list_margin"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/lbl_user_gender"
                        style="@style/Style_User_Information_Label" />

                    <TextView
                        android:id="@+id/user_gender_tv"
                        style="@style/Style_User_Information_Value" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:padding="@dimen/common_padding"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/lbl_user_skill"
                        style="@style/Style_User_Information_Label" />

                    <TextView
                        android:id="@+id/user_skill_tv"
                        style="@style/Style_User_Information_Value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/lbl_user_platform"
                        style="@style/Style_User_Information_Label" />

                    <TextView
                        android:id="@+id/user_platform_tv"
                        style="@style/Style_User_Information_Value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/lbl_user_location"
                        style="@style/Style_User_Information_Label" />

                    <TextView
                        android:id="@+id/user_location_tv"
                        style="@style/Style_User_Information_Value" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.osc.tweet.views.RoundedNetworkImageView
            android:id="@+id/user_photo_iv"
            android:layout_width="@dimen/portrait_large_size"
            android:layout_height="@dimen/portrait_large_size" />
    </FrameLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb"
        android:layout_gravity="center" />
</FrameLayout>