<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary_color"
        android:padding="@dimen/common_padding">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/user_photo_fl"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.osc.tweet.views.RoundedNetworkImageView
                    android:id="@+id/user_photo_iv"
                    android:layout_width="@dimen/portrait_large_size"
                    android:layout_height="@dimen/portrait_large_size" />


                <ImageButton
                    android:id="@+id/edit_me_btn"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_small_white"
                    android:src="@drawable/ic_edit_me" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right|top"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/refresh_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/common_transparent"
                    android:src="@drawable/ic_refresh" />


                <ImageButton
                    android:id="@+id/settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/common_transparent"
                    android:src="@drawable/ic_settings" />
                <ImageButton
                    android:id="@+id/me_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/common_transparent"
                    android:src="@drawable/ic_me" />



            </LinearLayout>
        </FrameLayout>


        <LinearLayout
            android:id="@+id/my_notices_ll"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/common_padding"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/lbl_hello"
                    style="@style/Style_My_Information_Label" />

                <TextView
                    android:id="@+id/user_name_tv"
                    android:textColor="@color/common_white"
                    style="@style/Style_User_Information_Value" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/lbl_current"
                    style="@style/Style_My_Information_Label" />

                <TextView
                    android:id="@+id/notices_count_tv"
                    android:textColor="@color/common_white"
                    style="@style/Style_User_Information_Value" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_hometown_friends_ll"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/common_padding"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:text="@string/lbl_hometown"
                style="@style/Style_My_Information_Label" />

            <TextView
                android:id="@+id/hometown_tv"
                android:text="@string/lbl_no_home"
                android:textColor="@color/common_white"
                style="@style/Style_User_Information_Value" />
        </LinearLayout>

        <TextView
            android:id="@+id/friends_count_tv"
            android:text="@string/lbl_friends_count"
            android:textColor="@color/common_white"
            style="@style/Style_User_Information_Value" />
    </LinearLayout>


</FrameLayout>